Se agrega la funcion de autorizar empleado para dar acceso a cosas de empleado unicamente a empleado y no a usuarios

--- a/ProyectoFinalPogragamacionVI.csproj
+++ b/ProyectoFinalPogragamacionVI.csproj
@@ -271,6 +271,7 @@
       <DependentUpon>MyDataBase.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SpLoginUsuario_Result.cs" />
+    <Compile Include="Permisos\AutorizarEmpleadoAttribute.cs" />
     <Compile Include="Permisos\ValidarSessionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
