--- a/ProyectoFinalPogragamacionVI.csproj
+++ b/ProyectoFinalPogragamacionVI.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Cobros.cs" />
     <Compile Include="Models\ConsultarCobro.cs" />
     <Compile Include="Models\ConsultarCobroUsuario.cs" />
     <Compile Include="Models\DetalleCobro.cs" />
@@ -354,6 +355,7 @@
     <Content Include="Views\Autenticacion\Index.cshtml" />
     <Content Include="Views\Empleado\Index.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
+    <Content Include="Views\Empleado\Crear.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
