--- a/ProyectoFinalPogragamacionVI.csproj
+++ b/ProyectoFinalPogragamacionVI.csproj
@@ -359,6 +359,7 @@
     <Content Include="Views\Usuario\Index.cshtml" />
     <Content Include="Views\Empleado\Crear.cshtml" />
     <Content Include="Views\Cobros\Detalle.cshtml" />
+    <Content Include="Views\Usuario\Crear.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
